--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "_encrypt": "npx staticrypt build/index.html oiwqefoiwqjfoiweqfoj -o build/index.html"
   },
   "eslintConfig": {
     "extends": [
