--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "request-to-curl": "^0.1.6",
     "use-sound": "^2.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.21"
   },
   "scripts": {
     "start": "react-scripts start",
